--- a/view/nueva_venta.html
+++ b/view/nueva_venta.html
@@ -307,6 +307,7 @@
                <h4 class="modal-title">Guardar como...</h4>
             </div>
             <div class="modal-body">
+               <!--
                {loop="$fsc->tipos_a_guardar()"}
                <div class="radio">
                   <label>
@@ -315,6 +316,13 @@
                   </label>
                </div>
                {/loop}
+               -->
+               <div class="radio">
+               		<label>
+               		<input type="radio" name="tipo" value="albaran" checked="checked"> Factura de Cliente
+               		</label>
+               </div>
+               
                <div class="form-group">
                   <a href="{$fsc->forma_pago->url()}">Forma de pago</a>:
                   <select name="forma_pago" class="form-control">
