--- a/view/ventas_albaran.html
+++ b/view/ventas_albaran.html
@@ -83,9 +83,11 @@
                </a>
                {/if}
                {if condition="$fsc->albaran->ptefactura"}
+               <!--
                <a class="btn btn-sm btn-default" href="{$fsc->url()}&facturar=TRUE&petid={$fsc->random_string()}">
                   <span class="glyphicon glyphicon-paperclip"></span> &nbsp; Aprobar
                </a>
+               -->
                {else}
                <a class="btn btn-sm btn-default text-capitalize" href="{$fsc->albaran->factura_url()}">
                   <span class="glyphicon glyphicon-eye-open"></span> &nbsp; Ver Factura
@@ -143,13 +145,19 @@
             </div>
          </div>
          {/if}
+         
          <div class="col-md-2 col-sm-2">
+         <!--
             <div class="form-group">
                Número 2:
                <input class="form-control" type="text" name="numero2" value="{$fsc->albaran->numero2}"/>
             </div>
+                     -->
          </div>
+
+         
          <div class="col-md-2 col-sm-2">
+         <!--
             <div class="form-group">
                <a href="{$fsc->serie->url()}">Serie</a>:
                {if condition="$fsc->albaran->ptefactura"}
@@ -166,6 +174,7 @@
                <div class="form-control">{$fsc->albaran->codserie}</div>
                {/if}
             </div>
+            -->
          </div>
          <div class="col-md-2 col-sm-2">
             <div class="form-group">
@@ -257,8 +266,8 @@
                                   onchange="recalcular()" onclick="this.select()" autocomplete="off"/>                        </td>
 
                         <td>
-                           <input type="text" class="form-control text-right" id="total_{$counter}" name="total_{$counter}"
-                                  onchange="ajustar_total()" onclick="this.select()" autocomplete="off"/>
+                           <input type="text" class="form-control text-right" id="neto_real_{$counter}" name="neto_real_{$counter}"
+                                  onchange="recalcular()" onclick="this.select()" autocomplete="off"/>
                         </td>
                      </tr>
                      {/loop}
