--- a/view/ventas_albaranes.html
+++ b/view/ventas_albaranes.html
@@ -62,7 +62,7 @@
          
          <div class="btn-group">
             <a class="btn btn-sm btn-success" href="index.php?page=nueva_venta&tipo=albaran">
-               <span class="glyphicon glyphicon-plus"></span> &nbsp; Nuevo
+               <span class="glyphicon glyphicon-plus"></span> &nbsp; Nueva
             </a>
             
             <!-- CAMBIO
@@ -105,7 +105,7 @@
 
 <ul class="nav nav-tabs" role="tablist">
    <li{if condition="!$fsc->pendientes"} class="active"{/if}>
-      <a href="{$fsc->url()}&ptefactura=FALSE">Todos los {#FS_ALBARANES#}</a>
+      <a href="{$fsc->url()}&ptefactura=FALSE">Todas las {#FS_ALBARANES#}</a>
    </li>
    <!-- CAMBIO
    <li{if condition="$fsc->pendientes"} class="active"{/if}>
