--- a/view/tpv_recambios2.html
+++ b/view/tpv_recambios2.html
@@ -54,7 +54,7 @@
          <div class="col-lg-6 col-md-6 col-sm-6">
             <div class="form-group">
                Cliente:
-               <select class="form-control" name="cliente">
+               <select class="form-control" name="cliente" id="cliente_select">
                {loop="$fsc->cliente->all_full()"}
                   {if condition="$value->is_default()"}
                   <option value="{$value->codcliente}" selected="selected">{$value->nombre}</option>
@@ -241,7 +241,7 @@
             </button>
          </div>
          <div class="col-lg-6 col-md-6 col-sm-6 text-right">
-            <button class="btn btn-sm btn-primary" type="submit" onclick="this.disabled=true;this.form.submit();">
+            <button target="_blank" class="btn btn-sm btn-primary" type="submit" onclick="this.disabled=true; this.form.target = '_blank'; this.form.submit();">
                <span class="glyphicon glyphicon-floppy-disk"></span> &nbsp; Guardar
             </button>
          </div>
@@ -300,3 +300,9 @@
       </div>
    </div>
 </div>
+
+<script>
+	$(document).ready(function() {
+		$("#cliente_select").select2();
+	});
+</script>>
